--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-torch==1.0.0
-torchvision==0.2.1
-Flask==1.0.2
-fastai==1.0.42
+numpy
+torchvision
+https://download.pytorch.org/whl/cpu/torch-1.0.1.post2-cp37-cp37m-linux_x86_64.whl
+fastai
+starlette
+uvicorn==0.3.32
+python-multipart
+aiofiles
+aiohttp
