--- a/src/config.yaml
+++ b/src/config.yaml
@@ -15,7 +15,7 @@ about:
 
   [Blog](https://reshamas.github.io/deploying-deep-learning-models-on-web-and-mobile/)
 
-  [Web app](https://food-img-classifier.herokuapp)
+  [Web app](https://food-img-classifier.herokuapp.com)
 
 
   To try out this mobile app
@@ -41,4 +41,3 @@ sampleImages:
     url: https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Solanum_melongena_24_08_2012_%281%29.JPG/1280px-Solanum_melongena_24_08_2012_%281%29.JPG
   - name: table (not in training & not a food)
     url: https://image.shutterstock.com/image-photo/brown-light-wooden-round-dining-260nw-588358070.jpg 
-© 2019 GitHub, Inc.
